# Constellation_Protocol

./: .gitignore  Cargo.toml  README.md  canister_ids.json  deploy.sh  dfx.json  package.json  tsconfig.json
canisters/constellation/: Cargo.toml  constellation.did
canisters/constellation/src/: config.rs  lib.rs
canisters/constellation/src/ethereum/: types.rs  utils.rs
canisters/constellation/src/http/: assets.rs  mod.rs  response.rs  router.rs  types.rs  utils.rs
canisters/constellation/src/http/endpoints/: metadata.rs  mod.rs
canisters/constellation/src/icrc3/: add_block.rs  get_block_data.rs  get_chain_data.rs  icrc3_hash_utils.rs  icrc3_json_utils.rs  icrc3_types.rs  initialize_icrc3_ledger.rs  mod.rs  standard_icrc.rs  verify_chain_integrity.rs
canisters/constellation/src/services/: add_image.rs  get_contract_address.rs  get_siwe_principal_eth_address_service.rs  is_token_owner_service.rs  mod.rs  set_contract_address.rs
canisters/galaxy/: Cargo.toml  galaxy.did
canisters/galaxy/src/: lib.rs
canisters/galaxy/src/abi/: AssetGovernance1155.json
canisters/galaxy/src/controller/: add_block.rs  asset_mapping.rs  asset_query_funcs.rs  create_icrc3_canister.rs  delete_canister.rs  deploy_asset.rs  mod.rs  types.rs  upload_wasm.rs
canisters/galaxy/src/ethereum/: cancel_transaction.rs  deploy_ethereum_contract.rs  get_balance.rs  get_latest_block.rs  get_nft_owner_of.rs  get_wallet_address.rs  mint_token.rs  mint_unique_token.rs  mod.rs  test_contract_connection.rs  transfer_ownership.rs  types.rs
scripts/: update-canister-ids.js  upload_display_item.sh
