[package]
name = "constellation"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.13"
hex = "0.4.3"
ic-cdk = "0.17.1"
ic-http-certification = "3.0.2"
ic-stable-structures = "0.6.7"
icrc-ledger-types = "0.1.8"
include_dir = { version = "0.7.4", features = ["glob"] }
lazy_static = "1.5.0"
serde = "1.0.217"
serde_bytes = "0.11.15"
serde_json = "1.0.138"
sha2 = "0.10.8"
# Use local clone of `ic-alloy`
alloy = { git = "https://github.com/ic-alloy/ic-alloy.git", tag = "v0.3.5-icp.0", default-features = false, features = [
   "icp",
   "sol-types",
   "json",
   "contract",   
] }
base64 = "0.22.1"
ic-cdk-timers = "0.10.0"
getrandom = { version = "0.2.15", features = ["custom"] }
rand = "0.8"
bincode = "1.3.3"
matchit = "0.8.6"
ic-asset-certification = "3.0.3"
ic-certification = "3.0.3"
serde_cbor = "0.11.2"

